--- a/app/Resources/views/groups/all_groups.html.twig
+++ b/app/Resources/views/groups/all_groups.html.twig
@@ -1,448 +1,52 @@
 <div id="group_all_groups" class="group ">
+
     <section class="background_purple">
         <a id="close_all_groups" href="#" class="close"><i class="fa fa-times"></i></a>
+
         <div class="sort">
             <a href="#"><i class="fa fa-sort-amount-asc"></i></a>
-            <span>A-Z</span>
-      <span class="sort_container">
-        <a id="sort_menu_purple" href="#"><i class="fa fa-sort-down"></i></a>
-      </span>
+            <span>{{ 'A-Z'|trans }}</span>
+            <span class="sort_container">
+                <a id="sort_menu_purple" href="#"><i class="fa fa-sort-down"></i></a>
+            </span>
         </div>
+
         <div id="sort_drop_down_purple" class="hidden sort_drop_down_purple">
             <ul>
-                <li><a href="#" class="active">Title</a></li>
-                <li><a href="#">Description</a></li>
-                <li><a href="#">Date</a></li>
+                <li><a href="#" class="active">{{ 'Title'|trans }}</a></li>
+                <li><a href="#">{{ 'Description'|trans }}</a></li>
+                <li><a href="#">{{ 'Date'|trans }}</a></li>
             </ul>
         </div>
+
         <div>
-            <h3>ALL GROUPS</h3>
-            <p>There is a total of 213 groups</p>
+            <h3>{{ 'ALL GROUPS'|trans }}</h3>
+            <p>{{ 'There is a total of %count% groups'|trans({'%count%': 213}) }}</p>
         </div>
     </section>
 
-
     <ul>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user purple"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
+        {% for group in groups %}
+            <li class="group_section">
+                <div>
+                    <i class="fa fa-user purple"></i>
+                    <span>12</span>
+                </div>
+                <div>
+                    <p>{{ group.name }}</p>
+                    <p>{{ group.description }}&nbsp;</p>
+                    <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
+                </div>
+                <div>
+                    {# todo: if already joined show other buttons #}
+                    {% if group.type == 'grouphub' %}
+                    <a class="button_join" href="#">
+                        <span>{{ 'JOIN'|trans }}</span>
+                    </a>
+                    {% endif %}
+                </div>
+            </li>
+        {% endfor %}
     </ul>
 
 </div>
