--- a/app/Resources/views/groups/my_groups.html.twig
+++ b/app/Resources/views/groups/my_groups.html.twig
@@ -1,129 +1,106 @@
 <div id="group_my_groups" class="group ">
+
     <section class="background_blue">
         <a id="close_my_groups" href="#" class="close"><i class="fa fa-times"></i></a>
+
         <div class="sort">
             <a href="#"><i class="fa fa-sort-amount-asc"></i></a>
-            <span>A-Z</span>
-      <span class="sort_container">
-        <a id="sort_menu_blue" href="#"><i class="fa fa-sort-down"></i></a>
-      </span>
+            <span>{{ 'A-Z'|trans }}</span>
+            <span class="sort_container">
+                <a id="sort_menu_blue" href="#"><i class="fa fa-sort-down"></i></a>
+            </span>
         </div>
+
         <div id="sort_drop_down_blue" class="hidden sort_drop_down_blue">
             <ul>
-                <li><a href="#" class="active">Title</a></li>
-                <li><a href="#">Description</a></li>
-                <li><a href="#">Date</a></li>
+                <li><a href="#" class="active">{{ 'Title'|trans }}</a></li>
+                <li><a href="#">{{ 'Description'|trans }}</a></li>
+                <li><a href="#">{{ 'Date'|trans }}</a></li>
             </ul>
         </div>
+
         <div>
-            <h3>MY GROUPS</h3>
-            <p>You own or are a member of the group</p>
+            <h3>{{ 'MY GROUPS'|trans }}</h3>
+            <p>{{ 'You own or are a member of the group'|trans }}</p>
         </div>
     </section>
 
     <section class="owned">
         <i class="fa fa-angle-down"></i>
-        <h3>Owner</h3>
+        <h3>{{ 'Owner'|trans }}</h3>
     </section>
+
     <ul>
+        {% for group in myGroups %}
+        {% if group.group.type == 'grouphub' and group.role == 'owner' %}
         <li class="group_section">
             <div>
                 <i class="fa fa-user blue"></i>
                 <span>12</span>
             </div>
             <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
+                <p>{{ group.group.name }}</p>
+                <p>{{ group.group.description }}&nbsp;</p>
+                <p>{{ group.group.timeStamp|localizeddate('medium', 'none') }}</p>
             </div>
             <div>
-                <a class="button_edit" href="#" data-hover="LEAVE"><span>EDIT</span></a>
+                <a class="button_edit" href="#" data-hover="{{ 'LEAVE'|trans }}"><span>{{ 'EDIT'|trans }}</span></a>
             </div>
         </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user blue"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_edit" href="#" data-hover="LEAVE"><span>EDIT</span></a>
-            </div>
-        </li>
+        {% endif %}
+        {% endfor %}
     </ul>
 
     <section class="owned">
         <i class="fa fa-angle-down"></i>
-        <h3>Administrator</h3>
+        <h3>{{ 'Administrator'|trans }}</h3>
     </section>
+
     <ul>
+        {% for group in myGroups %}
+        {% if group.group.type == 'grouphub' and group.role == 'admin' %}
         <li class="group_section">
             <div>
                 <i class="fa fa-user blue"></i>
                 <span>12</span>
             </div>
             <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
+                <p>{{ group.group.name }}</p>
+                <p>{{ group.group.description }}&nbsp;</p>
+                <p>{{ group.group.timeStamp|localizeddate('medium', 'none') }}</p>
             </div>
             <div>
-                <a class="button_edit" href="#" data-hover="LEAVE"><span>EDIT</span></a>
+                <a class="button_edit" href="#" data-hover="{{ 'LEAVE'|trans }}"><span>{{ 'EDIT'|trans }}</span></a>
             </div>
         </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user blue"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_edit" href="#" data-hover="LEAVE"><span>EDIT</span></a>
-            </div>
-        </li>
+        {% endif %}
+        {% endfor %}
     </ul>
 
     <section class="owned">
         <i class="fa fa-angle-down"></i>
-        <h3>Member</h3>
+        <h3>{{ 'Member'|trans }}</h3>
     </section>
+
     <ul>
+        {% for group in myGroups %}
+        {% if group.group.type == 'grouphub' and group.role == 'member' %}
         <li class="group_section">
             <div>
                 <i class="fa fa-user blue"></i>
                 <span>12</span>
             </div>
             <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
+                <p>{{ group.group.name }}</p>
+                <p>{{ group.group.description }}&nbsp;</p>
+                <p>{{ group.group.timeStamp|localizeddate('medium', 'none') }}</p>
             </div>
             <div>
-                <a class="button_member" href="#" data-hover="LEAVE"><span>MEMBER</span></a>
+                <a class="button_member" href="#" data-hover="{{ 'LEAVE'|trans }}"><span>{{ 'MEMBER'|trans }}</span></a>
             </div>
         </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user blue"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_member" href="#" data-hover="LEAVE"><span>MEMBER</span></a>
-            </div>
-        </li>
+        {% endif %}
+        {% endfor %}
     </ul>
 
 </div>
