--- a/app/Resources/views/groups/my_groups.html.twig
+++ b/app/Resources/views/groups/my_groups.html.twig
@@ -25,82 +25,84 @@
         </div>
     </section>
 
-    <section class="owned">
-        <i class="fa fa-angle-down"></i>
-        <h3>{{ 'Owner'|trans }}</h3>
-    </section>
+    {% if ownerGrouphubGroups %}
+        <section class="owned">
+            <i class="fa fa-angle-down"></i>
+            <h3>{{ 'Owner'|trans }}</h3>
+        </section>
 
-    <ul>
-        {% for group in myGroups %}
-        {% if group.group.type == 'grouphub' and group.role == 'owner' %}
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user blue"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>{{ group.group.name }}</p>
-                <p>{{ group.group.description }}&nbsp;</p>
-                <p>{{ group.group.timeStamp|localizeddate('medium', 'none') }}</p>
-            </div>
-            <div>
-                <a class="button_edit" href="#" data-hover="{{ 'LEAVE'|trans }}"><span>{{ 'EDIT'|trans }}</span></a>
-            </div>
-        </li>
-        {% endif %}
-        {% endfor %}
-    </ul>
+        <ul>
+            {% for group in ownerGrouphubGroups %}
+                <li class="group_section">
+                    <div>
+                        <i class="fa fa-user blue"></i>
+                        <span>12</span>
+                    </div>
+                    <div>
+                        <p>{{ group.name }}</p>
+                        <p>{{ group.description }}&nbsp;</p>
+                        <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
+                    </div>
+                    <div>
+                        <a class="button_edit" href="#"><span>{{ 'EDIT'|trans }}</span></a>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
-    <section class="owned">
-        <i class="fa fa-angle-down"></i>
-        <h3>{{ 'Administrator'|trans }}</h3>
-    </section>
+    {% if adminGrouphubGroups %}
+        <section class="owned">
+            <i class="fa fa-angle-down"></i>
+            <h3>{{ 'Administrator'|trans }}</h3>
+        </section>
 
-    <ul>
-        {% for group in myGroups %}
-        {% if group.group.type == 'grouphub' and group.role == 'admin' %}
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user blue"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>{{ group.group.name }}</p>
-                <p>{{ group.group.description }}&nbsp;</p>
-                <p>{{ group.group.timeStamp|localizeddate('medium', 'none') }}</p>
-            </div>
-            <div>
-                <a class="button_edit" href="#" data-hover="{{ 'LEAVE'|trans }}"><span>{{ 'EDIT'|trans }}</span></a>
-            </div>
-        </li>
-        {% endif %}
-        {% endfor %}
-    </ul>
+        <ul>
+            {% for group in adminGrouphubGroups %}
+                <li class="group_section">
+                    <div>
+                        <i class="fa fa-user blue"></i>
+                        <span>12</span>
+                    </div>
+                    <div>
+                        <p>{{ group.name }}</p>
+                        <p>{{ group.description }}&nbsp;</p>
+                        <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
+                    </div>
+                    <div>
+                        <a class="button_edit" href="#"><span>{{ 'EDIT'|trans }}</span></a>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
-    <section class="owned">
-        <i class="fa fa-angle-down"></i>
-        <h3>{{ 'Member'|trans }}</h3>
-    </section>
+    {% if memberGrouphubGroups %}
+        <section class="owned">
+            <i class="fa fa-angle-down"></i>
+            <h3>{{ 'Member'|trans }}</h3>
+        </section>
 
-    <ul>
-        {% for group in myGroups %}
-        {% if group.group.type == 'grouphub' and group.role == 'member' %}
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user blue"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>{{ group.group.name }}</p>
-                <p>{{ group.group.description }}&nbsp;</p>
-                <p>{{ group.group.timeStamp|localizeddate('medium', 'none') }}</p>
-            </div>
-            <div>
-                <a class="button_member" href="#" data-hover="{{ 'LEAVE'|trans }}"><span>{{ 'MEMBER'|trans }}</span></a>
-            </div>
-        </li>
-        {% endif %}
-        {% endfor %}
-    </ul>
+        <ul>
+            {% for group in memberGrouphubGroups %}
+                <li class="group_section">
+                    <div>
+                        <i class="fa fa-user blue"></i>
+                        <span>12</span>
+                    </div>
+                    <div>
+                        <p>{{ group.name }}</p>
+                        <p>{{ group.description }}&nbsp;</p>
+                        <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
+                    </div>
+                    <div>
+                        <a class="button_member" href="#" data-hover="{{ 'LEAVE'|trans }}">
+                            <span>{{ 'MEMBER'|trans }}</span>
+                        </a>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
 </div>
