--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -6,7 +6,7 @@
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"
           name="viewport">
 
-    <title>SURF - Grouphub</title>
+    <title>{{ 'Surfnet'|trans }} - {{ 'GroupHUB'|trans }}</title>
 
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -45,8 +45,8 @@
             </a>
         </li>
         <li class="language-selector">
-            <a class="button_grey" id="language_selector_link" href="#">EN<i class="fa fa-sort-down"></i></a>
-            <a class="button_grey hidden" id="language_selector_menu" href="#">NL</a>
+            <a class="button_grey" id="language_selector_link" href="#">{{ 'EN'|trans }}<i class="fa fa-sort-down"></i></a>
+            <a class="button_grey hidden" id="language_selector_menu" href="#">{{ 'NL'|trans }}</a>
         </li>
     </ul>
 </header>
@@ -88,7 +88,7 @@
 
 <footer>
     <ul>
-        <li><a href="#">{{ 'SURFnet'|trans }}</a></li>
+        <li><a href="#">{{ 'Surfnet'|trans }}</a></li>
         <li><a href="#">{{ 'Terms & conditions'|trans }}</a></li>
         <li><a href="#">{{ 'Privacy'|trans }}</a></li>
     </ul>
