Added search functionality

--- a/app/Resources/views/groups/search.html.twig
+++ b/app/Resources/views/groups/search.html.twig
@@ -1,448 +1,32 @@
 <div id="group_search" class="group hidden">
+
     <section class="background_grey">
         <a id="close_search" href="#" class="close"><i class="fa fa-times"></i></a>
+
         <div class="sort">
             <a href="#"><i class="fa fa-sort-amount-asc"></i></a>
-            <span>A-Z</span>
-      <span class="sort_container">
-        <a id="sort_menu_grey" href="#"><i class="fa fa-sort-down"></i></a>
-      </span>
+            <span>{{ 'A-Z'|trans }}</span>
+            <span class="sort_container">
+                <a id="sort_menu_grey" href="#"><i class="fa fa-sort-down"></i></a>
+            </span>
         </div>
+
         <div id="sort_drop_down_grey" class="hidden sort_drop_down_grey">
             <ul>
-                <li><a href="#" class="active">Title</a></li>
-                <li><a href="#">Description</a></li>
-                <li><a href="#">Date</a></li>
+                <li><a href="#" class="active">{{ 'Title'|trans }}</a></li>
+                <li><a href="#">{{ 'Description'|trans }}</a></li>
+                <li><a href="#">{{ 'Date'|trans }}</a></li>
             </ul>
         </div>
+
         <div>
-            <h3>SEARCH</h3>
-            <p>Results for data</p>
+            <h3>{{ 'SEARCH'|trans }}</h3>
+            <p>{{ 'Results for data'|trans }}</p>
         </div>
     </section>
 
+    <ul data-url="{{ path('search') }}">
 
-    <ul>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
-        <li class="group_section">
-            <div>
-                <i class="fa fa-user grey"></i>
-                <span>12</span>
-            </div>
-            <div>
-                <p>Data Management Landscape</p>
-                <p>Temporibus autem quibusdam et aut.</p>
-                <p>15 December 2015</p>
-            </div>
-            <div>
-                <a class="button_join" href="#" data-hover="LEAVE"><span>JOIN</span></a>
-            </div>
-        </li>
     </ul>
 
 </div>
