--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
 
+    <script src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+
     {% javascripts 'js/*'  output='compiled/js/grouphub.js' %}
     <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
