The cancel button closes the popup now

--- a/app/Resources/views/popups/new_group.html.twig
+++ b/app/Resources/views/popups/new_group.html.twig
@@ -25,7 +25,7 @@
             {% endif %}
 
             <button type="submit" class="button_blue">{{ 'Submit'|trans }}</button>
-            <a href="#" class="button_dark_grey">{{ 'Cancel'|trans }}</a>
+            <a href="#" class="close-modal button_dark_grey">{{ 'Cancel'|trans }}</a>
         {{ form_end(add_form) }}
     </div>
 
