WIP on view/edit popup

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -100,7 +100,8 @@
 
 {{ include(':popups:notifications.html.twig') }}
 {{ include(':popups:new_group.html.twig') }}
-{{ include(':popups:edit_group.html.twig') }}
+
+<section id="edit_group" class="edit_group_container hidden"></section>
 
 </body>
 </html>
