--- a/app/Resources/views/groups/organisation_groups.html.twig
+++ b/app/Resources/views/groups/organisation_groups.html.twig
@@ -44,7 +44,9 @@
                         <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
                     </div>
                     <div>
-                        <a class="button_edit" href="#"><span>{{ 'EDIT'|trans }}</span></a>
+                        <a class="button_edit" href="#" data-url="{{ path('group_details', {'id': group.id}) }}">
+                            <span>{{ 'EDIT'|trans }}</span>
+                        </a>
                     </div>
                 </li>
             {% endfor %}
@@ -70,7 +72,9 @@
                         <p>{{ group.timeStamp|localizeddate('medium', 'none') }}</p>
                     </div>
                     <div>
-                        <a class="button_edit" href="#"><span>{{ 'EDIT'|trans }}</span></a>
+                        <a class="button_edit" href="#" data-url="{{ path('group_details', {'id': group.id}) }}">
+                            <span>{{ 'EDIT'|trans }}</span>
+                        </a>
                     </div>
                 </li>
             {% endfor %}
